<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    >
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/category_main_layout_margin"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        >
        <LinearLayout
            android:clickable="true"
            android:id="@+id/b_science"
            android:orientation="horizontal"
            android:layout_height="@dimen/category_height"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/category_button_margin_"
            android:elevation="@dimen/category_button_elevation"
            android:background="@drawable/category_sub_bg">
            <ImageView
                android:layout_gravity="center_vertical"
                android:layout_width="@dimen/category_image_height_"
                android:layout_height="match_parent"
                android:src="@drawable/sc_logo"
                android:background="@drawable/category_button_background"
                android:padding="@dimen/category_image_padding_"
                />
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/category_rightside_marginLeft"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sc"
                    android:textColor="@color/button_col_2"
                    android:text="@string/cat_science"
                    android:textSize="@dimen/category_title"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_sc_completed"
                    android:textSize="@dimen/category_score"
                    android:text="Completed: 5/50"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:layout_marginTop="5dp"
                    />
                <ProgressBar
                    android:paddingRight="@dimen/category_progressbar_padding_right"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_progressbar_height"
                    android:id="@+id/tv_sc_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="5"
                    android:indeterminate="false"
                    android:max="50"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/progress_bar_draw"
                    android:layout_marginRight="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/b_geography"
            android:elevation="@dimen/category_button_elevation"
            android:orientation="horizontal"
            android:clickable="true"
            android:layout_height="@dimen/category_height"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/category_button_margin_"
            android:background="@drawable/category_sub_bg">
            <ImageView
                android:layout_width="@dimen/category_image_height_"
                android:layout_height="match_parent"
                android:padding="@dimen/category_image_padding_"
                android:src="@drawable/geo_logo"
                android:background="@drawable/category_button_background"
                />
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/category_rightside_marginLeft"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/button_col_2"
                    android:id="@+id/tv_geo"
                    android:text="@string/cat_geo"
                    android:textSize="@dimen/category_title"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_geo_completed"
                    android:textSize="@dimen/category_score"
                    android:textColor="@color/white"
                    android:text="Completed :  5/50"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>
                <ProgressBar
                    android:paddingRight="@dimen/category_progressbar_padding_right"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_progressbar_height"
                    android:id="@+id/tv_geo_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="50"
                    android:indeterminate="false"
                    android:max="50"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/progress_bar_draw"
                    android:layout_marginRight="5dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/b_math"
            android:elevation="@dimen/category_button_elevation"
            android:orientation="horizontal"
            android:layout_height="@dimen/category_height"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_margin="@dimen/category_button_margin_"
            android:background="@drawable/category_sub_bg">
            <ImageView
                android:layout_width="@dimen/category_image_height_"
                android:layout_height="match_parent"
                android:padding="@dimen/category_image_padding_"
                android:background="@drawable/category_button_background"
                android:src="@drawable/math_logo"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/category_rightside_marginLeft"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_math"
                    android:text="Math"
                    android:textColor="@color/button_col_2"
                    android:textSize="@dimen/category_title"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_mat_completed"
                    android:textSize="@dimen/category_score"
                    android:text="Completed :  5/50"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>
                <ProgressBar
                    android:paddingRight="@dimen/category_progressbar_padding_right"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_progressbar_height"
                    android:id="@+id/tv_math_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="50"
                    android:indeterminate="false"
                    android:max="50"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/progress_bar_draw"
                    android:layout_marginRight="5dp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:elevation="@dimen/category_button_elevation"
            android:orientation="horizontal"
            android:layout_height="@dimen/category_height"
            android:layout_width="match_parent"
            android:clickable="true"
            android:id="@+id/b_random"
            android:layout_margin="@dimen/category_button_margin_"
            android:background="@drawable/category_sub_bg">
            <ImageView
                android:layout_width="@dimen/category_image_height_"
                android:layout_height="match_parent"
                android:padding="@dimen/category_image_padding_"
                android:src="@drawable/ran_logo"
                android:background="@drawable/category_button_background"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/category_rightside_marginLeft"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_ran"
                    android:text="@string/cat_ran"
                    android:textSize="@dimen/category_title"
                    android:textColor="@color/button_col_2"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_ran_completed"
                    android:textSize="@dimen/category_score"
                    android:textColor="@color/white"
                    android:text="Completed :  5/50"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>
                <ProgressBar
                    android:paddingRight="@dimen/category_progressbar_padding_right"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_progressbar_height"
                    android:id="@+id/tv_ran_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="50"
                    android:indeterminate="false"
                    android:max="50"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/progress_bar_draw"
                    android:layout_marginRight="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/b_history"
            android:elevation="@dimen/category_button_elevation"
            android:orientation="horizontal"
            android:layout_height="@dimen/category_height"
            android:layout_width="match_parent"
            android:clickable="true"
            android:layout_margin="@dimen/category_button_margin_"
            android:background="@drawable/category_sub_bg">
            <ImageView
                android:layout_width="@dimen/category_image_height_"
                android:layout_height="match_parent"
                android:src="@drawable/his_logo"
                android:background="@drawable/category_button_background"
                android:padding="@dimen/category_image_padding_"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/category_rightside_marginLeft">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_his"
                    android:textColor="@color/button_col_2"
                    android:text="@string/cat_his"
                    android:textSize="@dimen/category_title" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_his_completed"
                    android:textColor="@color/white"
                    android:textSize="@dimen/category_score"
                    android:text="Completed :  5/50"
                    android:textStyle="bold"
                    android:layout_marginTop="05dp"/>
                <ProgressBar
                    android:paddingRight="@dimen/category_progressbar_padding_right"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_progressbar_height"
                    android:id="@+id/tv_his_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="50"
                    android:indeterminate="false"
                    android:max="50"
                    android:layout_marginTop="5dp"
                    android:progressDrawable="@drawable/progress_bar_draw"
                    android:layout_marginRight="5dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:elevation="@dimen/category_button_elevation"
            android:orientation="horizontal"
            android:layout_height="@dimen/category_height"
            android:clickable="true"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/category_button_margin_"
            android:id="@+id/b_sport"
            android:background="@drawable/category_sub_bg">
            <ImageView
                android:layout_width="@dimen/category_image_height_"
                android:layout_height="match_parent"
                android:padding="@dimen/category_image_padding_"
                android:src="@drawable/spo_logo"
                android:background="@drawable/category_button_background"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/category_rightside_marginLeft">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_spo"
                    android:text="@string/cat_sport"
                    android:textColor="@color/button_col_2"
                    android:textSize="@dimen/category_title"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_spo_completed"
                    android:textSize="@dimen/category_score"
                    android:textColor="@color/white"
                    android:text="Completed :  5/50"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"/>
                <ProgressBar
                    android:paddingRight="@dimen/category_progressbar_padding_right"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/category_progressbar_height"
                    android:id="@+id/tv_spo_progressbar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:progress="50"
                    android:indeterminate="false"
                    android:max="50"
                    android:layout_marginTop="05dp"
                    android:progressDrawable="@drawable/progress_bar_draw"
                    android:layout_marginRight="5dp"/>
            </LinearLayout>
        </LinearLayout>
        <ListView
            android:id="@+id/extraSub"
            tools:listitem="@layout/listview_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>
</ScrollView>